--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
-  # Spin up a Shiny docker
+# Spin up a Shiny docker
   shiny:
       restart: always
       image: rocker/shiny
@@ -59,27 +59,47 @@ services:
         - shiny-apps:/srv/shiny-server/
         - ./volumes/shiny/logs:/var/log/
         - r-packages:/usr/local/lib/R/site-library
-        
-  # Spin up Rstudio docker
-    tidyverse:
-      restart: always
-      image: mikkelkrogsholm/rstudio
-      container_name: rstudio
-      depends_on:
-        - shiny
-      expose:
-        - "8787"
-      environment:
-        - VIRTUAL_HOST=rstudio.mydomain.com
-        - VIRTUAL_NETWORK=nginx-proxy
-        - VIRTUAL_PORT=80
-        - LETSENCRYPT_HOST=rstudio.mydomain.com
-        - LETSENCRYPT_EMAIL=me@myemail.com
-        - USER=YOUR_USER
-        - PASSWORD=YOUR_PASSWORD
-      volumes:
-        - shiny-apps:/home/YOUR_USER/apps
-        - r-packages:/usr/local/lib/R/site-library
+
+# Spin up Rstudio docker
+
+## Use this version to add several users
+  # tidyverse:
+  #   restart: always
+  #   build: ./addusers
+  #   container_name: rstudio
+  #   depends_on:
+  #     - shiny
+  #   expose:
+  #     - "8787"
+  #   environment:
+  #     - VIRTUAL_HOST=rstudio.mydomain.com
+  #     - VIRTUAL_NETWORK=nginx-proxy
+  #     - VIRTUAL_PORT=80
+  #     - LETSENCRYPT_HOST=rstudio.mydomain.com
+  #     - LETSENCRYPT_EMAIL=me@myemail.com
+  #   volumes:
+  #     - shiny-apps:/home/shiny/apps # Remember to add shiny as a user
+  #     - r-packages:/usr/local/lib/R/site-library
+
+  tidyverse:
+    restart: always
+    image: mikkelkrogsholm/rstudio
+    container_name: rstudio
+    depends_on:
+      - shiny
+    expose:
+      - "8787"
+    environment:
+      - VIRTUAL_HOST=rstudio.mydomain.com
+      - VIRTUAL_NETWORK=nginx-proxy
+      - VIRTUAL_PORT=80
+      - LETSENCRYPT_HOST=rstudio.mydomain.com
+      - LETSENCRYPT_EMAIL=me@myemail.com
+      - USER=YOUR_USER
+      - PASSWORD=YOUR_PASSWORD
+    volumes:
+      - shiny-apps:/home/YOUR_USER/apps
+      - r-packages:/usr/local/lib/R/site-library
 
 # Create data docker volumes
 volumes:
